# dap-sdk

./: CMakeLists.txt  README.md  _build_init.sh  build_init.sh  dap_sdk.c
cmake/: Toolchain_host_Buster_target_armel.cmake  Toolchain_host_Linux_target_armel.cmake
include/: dap_sdk.h
modules/core/: CMakeLists.txt
modules/core/include/: dap_time.h
modules/core/src/: dap_config.c  dap_time.c
modules/core/src/unix/: CMakeLists.txt
modules/crypto/: CMakeLists.txt
modules/io/: CMakeLists.txt  dap_context.c
modules/io/include/: dap_events_socket.h
modules/net/app-cli/: CMakeLists.txt  dap_app_cli_net.c
modules/net/client/: CMakeLists.txt
modules/net/server/cli_server/: CMakeLists.txt
modules/net/server/http_server/: CMakeLists.txt  dap_http_folder.c  dap_http_simple.c
modules/net/stream/ch/: CMakeLists.txt  dap_stream_ch.c
modules/net/stream/session/: CMakeLists.txt
tests/: CMakeLists.txt
tests/cpp/: CMakeLists.txt  TestCommon.cpp
